--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       >
         
         <a
-          href="https://t.me/guru_network_bot/gurunetwork"
+          href="https://app-sagenetwork128.vercel.app/"
           class="page-header-menu__link "
           ><span class="caption">Sage App</span> 
         </a>
