--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
   </div>
 </section>
 
-<section class="section section--adopters" id="ecosystem">
+<!-- <section class="section section--adopters" id="ecosystem">
   <div class="section__header">
     <h2 class="section__title">Ecosystem</h2>
     <div class="variants">
@@ -485,7 +485,7 @@
       </ul>
     </div>
   </div>
-</section>
+</section> -->
 
 <script>
   (() => {
@@ -706,7 +706,12 @@
 
 <section class="section section--tokenomics">
   <div class="section__header">
-    <h2 class="section__title">SAGE Network: Tokenomics</h2>
+    <h2 class="section__title">SAGE Tokenomics</h2><br/>
+    <h3>CA: 0x00000000000000000000000000000</h3>
+    <h3 class="section__title">Total Supply : 100M</h3>
+    <h3 class="section__title">Liquidity Pool : LP Burned</h3>
+    <h3 class="section__title">Tax : 0% Buy/Sell Tax</h3>
+    <h3 class="section__title">Ownership Renounced</h3>
   </div>
   <div class="section__body">
     <div class="tokenomics">
