--- a/index.html
+++ b/index.html
@@ -252,15 +252,15 @@
     <strong class="banner__subtitle">Base Layer 3 allows dApps and retail users to natively embed Multi-Chain Web3 Automations and orchestrated AI Agents<br> into their routines and earn Network participant rewards.</strong><nav class="banner-actions">
       <div class="actions">
         <ul class="actions__list"><li class="actions__item"><a
-              href="https://docs.gurunetwork.ai"
+              href="https://app.uniswap.org/#/swap?inputCurrency=eth&outputCurrency=0x00000000000000000000000000000000000000"
               target="_blank"
               class="actions__link actions__link--secondary actions__link--main"
-              ><span class="caption"> Build On Sage </span></a
+              ><span class="caption"> Buy SAGE </span></a
             ></li><li class="actions__item"><a
-              href="https://etherscan.io/token/0x00000000000000000000000000000#code"
+              href="https://www.dextools.io/app/en/ether/pool-explorer/0x"
               target="_blank"
               class="actions__link actions__link--ternary actions__link--main"
-              ><span class="caption"> SAGE Token Contract </span></a
+              ><span class="caption"> Chart </span></a
             ></li></ul>
       </div>
     </nav></div></div>
